# multitask-hydranet

./: .gitignore  README.md
deploy/: CMakeLists.txt
deploy/src/demo/: Demo.cpp
deploy/src/interface/: Hydranet.cpp  Hydranet.h
deploy/src/model/: hydranet_model.cpp  hydranet_model.h  yolo_model.cpp  yolo_model.h
model/: demo.py  model.py  train.py
model/cfgs/: hydranet_joint_big_backbone.yml  hydranet_joint_big_backbone_interview.yml  hydranet_joint_small_backbone.yml
model/dataset/: dataloader.py  utility.py
model/head_detect/: detect_eval.py  detection.py  detection_loss.py  display.py  gen_val_json.py
model/head_lane/: lane_codec.py  lane_codec_utils.py  lane_metric.py  lane_spline_interp.py  lanedetect.py  lanedetect_loss.py
model/head_seg/: loss_lovasz.py  seg_metrics.py  segmentation.py  segmentation_loss.py
model/net/: anynet.py  bifpn.py  common.py  regnet.py
